--- a/admin.html
+++ b/admin.html
@@ -144,7 +144,7 @@
 
         // ─── SEZNAM ADMIN UID (přidej svá UID sem) ───────────────────────────
         // Jak získat UID: přihlas se do Firebase console → Authentication → Users
-        const ADMIN_UIDS = [
+        const ADMIN_UIDS = [pyyRzSGXzDcpo0wV8xzi0AOcJnb2 ,
             // "VLOZ_SEM_SVUJ_FIREBASE_UID_1",
             // "VLOZ_SEM_SVUJ_FIREBASE_UID_2",
         ];
