--- a/admin.html
+++ b/admin.html
@@ -76,6 +76,30 @@
             <div id="zebricek-hracu" class="space-y-1 text-sm"></div>
         </div>
 
+
+        <!-- 🗑️ Mazání piv hráče -->
+        <div class="glass-card p-6 mb-6 border border-red-900">
+            <h2 class="text-xl text-red-400 font-bold uppercase tracking-wide mb-1">🗑️ Správa zápisů hráče</h2>
+            <p class="text-xs text-gray-500 mb-4">Vyhledej hráče a smaž mu konkrétní záznamy (podvádění apod.).</p>
+
+            <div class="flex gap-2 mb-4">
+                <input id="admin-hrac-email" type="email" placeholder="E-mail hráče..." class="flex-grow p-2 text-sm bg-black bg-opacity-70 border border-gray-700 rounded text-white font-mono">
+                <button id="btn-hledat-hrace" class="btn btn-blue px-4 py-2 text-xs uppercase flex-shrink-0">🔍 Hledat</button>
+            </div>
+
+            <div id="admin-hrac-info" class="hidden mb-3 bg-black bg-opacity-50 rounded p-3 text-sm border border-gray-700">
+                <span class="text-yellow-400 font-bold" id="admin-hrac-prezdivka">—</span>
+                <span class="text-gray-400 ml-2" id="admin-hrac-xp">0 XP</span>
+                <span class="text-gray-600 ml-2 text-xs" id="admin-hrac-uid"></span>
+            </div>
+
+            <div id="admin-logy-box" class="hidden">
+                <div class="text-xs text-gray-400 uppercase font-bold mb-2">Posledních 50 zápisů</div>
+                <div id="admin-logy-seznam" class="space-y-1 max-h-96 overflow-y-auto bg-black bg-opacity-40 rounded p-2 border border-gray-800"></div>
+            </div>
+            <div id="admin-logy-loading" class="hidden text-gray-500 italic text-sm text-center py-4">Načítám...</div>
+        </div>
+
         <!-- Migrace databáze -->
         <div class="glass-card p-6 mb-6 border border-yellow-900">
             <h2 class="text-xl text-yellow-500 font-bold uppercase tracking-wide mb-1">🔧 Správa & Migrace</h2>
@@ -423,6 +447,101 @@
                 </div>`;
             }).join('') || '<div class="text-gray-600 text-sm">Žádní hráči.</div>';
         }
+
+        // ─── MAZÁNÍ ZÁPISŮ HRÁČE ─────────────────────────────────────────────
+        let adminVybranyHracUid = null;
+
+        document.getElementById('btn-hledat-hrace').addEventListener('click', async () => {
+            const email = document.getElementById('admin-hrac-email').value.trim().toLowerCase();
+            if (!email) { notify('Zadej e-mail hráče!'); return; }
+
+            document.getElementById('admin-hrac-info').classList.add('hidden');
+            document.getElementById('admin-logy-box').classList.add('hidden');
+            document.getElementById('admin-logy-loading').classList.remove('hidden');
+
+            try {
+                const q = query(collection(db, "hraci"), where("email", "==", email));
+                const snap = await getDocs(q);
+                if (snap.empty) { notify('Hráč s tímto e-mailem nenalezen.'); document.getElementById('admin-logy-loading').classList.add('hidden'); return; }
+
+                const d = snap.docs[0];
+                const h = d.data();
+                adminVybranyHracUid = d.id;
+
+                document.getElementById('admin-hrac-prezdivka').textContent = h.prezdivka || '—';
+                document.getElementById('admin-hrac-xp').textContent = (h.xp || 0) + ' XP';
+                document.getElementById('admin-hrac-uid').textContent = d.id;
+                document.getElementById('admin-hrac-info').classList.remove('hidden');
+
+                // Načti logy
+                const logySnap = await getDocs(query(
+                    collection(db, "hraci", d.id, "log_piv"),
+                    orderBy("cas", "desc"),
+                    limit(50)
+                ));
+
+                const seznam = document.getElementById('admin-logy-seznam');
+                if (logySnap.empty) {
+                    seznam.innerHTML = '<div class="text-gray-600 italic text-xs text-center py-3">Žádné záznamy.</div>';
+                } else {
+                    seznam.innerHTML = logySnap.docs.map(ld => {
+                        const z = ld.data();
+                        const casObj = z.cas?.toDate ? z.cas.toDate() : null;
+                        const datum = casObj ? casObj.toLocaleDateString('cs-CZ') + ' ' + casObj.toLocaleTimeString('cs-CZ', {hour:'2-digit',minute:'2-digit'}) : '—';
+                        return `<div class="flex justify-between items-center border-b border-gray-800 py-1 text-xs" id="logrow-${ld.id}">
+                            <span>
+                                <span class="text-yellow-400 font-bold">${escapeHtml(z.pivo || '—')}</span>
+                                <span class="text-gray-400"> @ ${escapeHtml(z.hospoda || '—')}</span>
+                                <span class="text-gray-600 ml-1">${datum}</span>
+                            </span>
+                            <button onclick="adminSmazatZapis('${ld.id}', '${escapeHtml(z.pivo||'')}', '${escapeHtml(z.hospoda||'')}')"
+                                class="btn btn-red px-2 py-0.5 text-xs ml-2 flex-shrink-0">🗑️ Smazat</button>
+                        </div>`;
+                    }).join('');
+                }
+
+                document.getElementById('admin-logy-box').classList.remove('hidden');
+            } catch(e) {
+                notify('Chyba: ' + e.message);
+            } finally {
+                document.getElementById('admin-logy-loading').classList.add('hidden');
+            }
+        });
+
+        window.adminSmazatZapis = async (logId, pivo, hospoda) => {
+            if (!adminVybranyHracUid) return;
+            if (!confirm('Smazat záznam "' + pivo + '" @ ' + hospoda + '? Odečte -100 XP hráči.')) return;
+
+            try {
+                const batch = writeBatch(db);
+                const logRef = doc(db, "hraci", adminVybranyHracUid, "log_piv", logId);
+                batch.delete(logRef);
+
+                // Odečti XP hráči
+                batch.update(doc(db, "hraci", adminVybranyHracUid), { xp: increment(-100) });
+
+                // Odečti ze statistik
+                const bezTecky = hospoda.replace(/\./g, '_');
+                await batch.commit();
+
+                try { await updateDoc(doc(db, "statistiky_piv", pivo), { pocet: increment(-1) }); } catch(e) {}
+                try { await updateDoc(doc(db, "statistiky_hospod", bezTecky), { pocet: increment(-1) }); } catch(e) {}
+
+                // Odstraň řádek z UI
+                const row = document.getElementById('logrow-' + logId);
+                if (row) row.remove();
+
+                // Aktualizuj zobrazené XP
+                const hSnap = await getDoc(doc(db, "hraci", adminVybranyHracUid));
+                if (hSnap.exists()) {
+                    document.getElementById('admin-hrac-xp').textContent = (hSnap.data().xp || 0) + ' XP';
+                }
+
+                notify('Záznam smazán a -100 XP odečteno.');
+            } catch(e) {
+                notify('Chyba při mazání: ' + e.message);
+            }
+        };
 
         // ─── UTILS ────────────────────────────────────────────────────────────
         function escapeHtml(str) {
